--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <junit.version>4.12</junit.version>
         <junit-vintage-version>4.12.0</junit-vintage-version>
         <jupiter-version>5.0.0</jupiter-version>
+        <jersey-version>2.29.1</jersey-version>
     </properties>
 
     <dependencies>
@@ -110,6 +111,18 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>${jersey-version}</version>
         </dependency>
     </dependencies>
     <build>
